--- a/csharp/cplex/cpxsharp-test/cpxsharp-test.csproj
+++ b/csharp/cplex/cpxsharp-test/cpxsharp-test.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{87C1F6DD-97D1-4B7B-BFCC-320CB8C86E49}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>gsharp_test</RootNamespace>
+    <RootNamespace>cpxsharp_test</RootNamespace>
     <AssemblyName>cpxsharp-test</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -35,6 +35,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="cpxsharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\api\bin\Debug\cpxsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,12 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\api\dev_cpxsharp.csproj">
-      <Project>{2138a0c3-4c0f-436a-b5b0-da18ea56afe3}</Project>
-      <Name>dev_cpxsharp</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\..\..\solvers-private\build\vs64\bin\cpxsharp_c\cpxsharp_c.dll">
