Added documentation formatting, theme and logo.

--- a/doc/cpp/Doxyfile.in
+++ b/doc/cpp/Doxyfile.in
@@ -23,4 +23,4 @@ EXPAND_ONLY_PREDEF     = YES
 HIDE_FRIEND_COMPOUNDS  = YES
 PREDEFINED = __cplusplus \
 			 protected=private
-EXCLUDE_SYMBOLS = AMPLAPI_EXPORTS AMPL_EXPLICIT AMPLAPI_PUBLIC AMPLAPI ampl::internal::* fmt::*
+EXCLUDE_SYMBOLS = AMPLAPI_EXPORTS AMPL_EXPLICIT ampl::impl::* fmt::*
