--- a/doc/cpp/Doxyfile.in
+++ b/doc/cpp/Doxyfile.in
@@ -10,6 +10,7 @@ QUIET            = NO
 JAVADOC_AUTOBRIEF = YES
 AUTOLINK_SUPPORT = YES
 INLINE_INHERITED_MEMB = YES
+INHERIT_DOCS = YES
 GENERATE_HTML = YES
 GENERATE_XML = YES
 XML_OUTPUT   = doxyxml
@@ -23,4 +24,4 @@ EXPAND_ONLY_PREDEF     = YES
 HIDE_FRIEND_COMPOUNDS  = YES
 PREDEFINED = __cplusplus \
 			 protected=private
-EXCLUDE_SYMBOLS = AMPLAPI_EXPORTS AMPL_EXPLICIT ampl::impl::* fmt::*
+EXCLUDE_SYMBOLS = AMPLAPI_EXPORTS AMPL_EXPLICIT fmt::*
