Modified writeSol signatures and cleanup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ if(SWIG_FOUND)
     cmake_policy(SET CMP0086 NEW)
   endif()
   include(UseSWIG)
+else()
+  message(WARNING "SWIG not found, Python and C# bindings will not be generated")
 endif()
 
 set(GENERATED_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include) # For generated files
@@ -109,7 +111,6 @@ macro(ADD_SWIG_LIBRARY name language)
 endmacro()
 
 function(AddSolverStub solver includes libs)
-  message(STATUS "Adding ${solver} with include: ${includes} and lib ${libs}")
   set(TARGETNAME ${solver}-drv)
   set(DIR_CPP ${CMAKE_CURRENT_SOURCE_DIR}/cpp/${solver})
   set(DIR_CPP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/cpp/${solver}/src)
@@ -122,13 +123,10 @@ function(AddSolverStub solver includes libs)
   set(IMPORTLIB ${solver}-lib)
   if(NOT TARGET ${IMPORTLIB})
       set(LIBFILENAME ${solver}-lib)
-      message("TRYING TO FIND LIBRARIES WITH NAME ${LIBFILENAME} IN ${LIBSDIR}")
       find_library(${solver}LIBFILE ${LIBFILENAME} PATHS ${LIBSDIR})
       if(WIN32)
         find_file(${solver}DLLFILE ${LIBFILENAME}.dll PATHS ${LIBSDIR})
       endif()
-      message("${solver}LIBFILE ${${solver}LIBFILE}")
-      message("${solver}DLLFILE ${${solver}DLLFILE}")
       add_library(${IMPORTLIB} SHARED IMPORTED)
     
       if(WIN32)
@@ -144,7 +142,6 @@ function(AddSolverStub solver includes libs)
     src/${solver}_callback.cpp)
   add_library(${TARGETNAME} STATIC ${DRV_SOURCES})
   target_link_libraries(${TARGETNAME} simpleapi ${libs} ${IMPORTLIB})
-  message("LINKING DRIVER ${TARGETNAME} WITH ${libs} AND ${IMPORTLIB}")
   target_include_directories(
     ${TARGETNAME} PUBLIC ${includes} ${DIR_CPP_INCLUDE} ${SIMPLEAPI_INCLUDE})
   add_to_folder(${solver} ${TARGETNAME})
@@ -161,7 +158,6 @@ function(AddSolverStub solver includes libs)
             ${DIR_CPP_INCLUDE} ${SIMPLEAPI_INCLUDE} ${includes})
   add_to_folder(${solver} ${TARGETNAME}-test)
   target_compile_definitions(${TARGETNAME}-test PRIVATE SWIG)
-  
   if (EXISTS ${DIR_SWIG})
     if(SWIG_FOUND)
         include(UseSWIG)
